kubernetes-ingress-networking/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: ingress-networking
  labels:
    app: web-app
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
