kubernetes-ingress-networking/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-nodeport
  namespace: ingress-networking
  labels:
    app: web-app
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
